# RTABMap_Semantic_Mapping

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  setup.py
include/: database_exporter.hpp  database_utils.hpp
models/: .gitignore
py_wrapper/: setup.py  wrapper.cpp
scripts/: semantic_mapping.py
src/: database_exporter.cpp  database_utils.cpp
